# servicenow-snowflake-denormalizer

./: .env.example  .gitignore  CLAUDE_CODE_PROMPT.md  LICENSE  README.md  denormalize.py  pyproject.toml  requirements.txt  setup.sql
tests/: test_denormalize.py
